--- a/packages/ui/public/manifest.json
+++ b/packages/ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "wakfu-tools",
+  "name": "wakfu-tools",
   "icons": [
     {
       "src": "favicon.ico",
