--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,14 +11,16 @@
     "cropperjs": "^2.0.0-alpha.1",
     "lodash": "^4.17.15",
     "nanoid": "^3.1.9",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-use": "^15.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "FAST_REFRESH=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
