--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-use": "^15.1.0"
+    "react-use": "^15.1.0",
+    "typeface-roboto": "^0.0.75"
   },
   "scripts": {
     "start": "FAST_REFRESH=true react-scripts start",
